--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
 			<img src="./img/logo.jpg" class="logo">
 			<div class="buttons">
 				<a class="button">Home</a>
-				<a class="button">Over Ons</a>
+				<a class="button">Over Ons </a>
 				<a class="button">Portfolio</a>
 				<a class="button">Nieuws</a>
 				<a class="button">Contact</a>
 			</div>
 		</div>
 		<img src="./img/header.jpg" class="headerLogo">
-		
+		<div class="images">
+			<img src="./img/banner-1.jpg" class="bannerImg1">
+			<img src="./img/banner-2.jpg" class="bannerImg2">
+			<img src="./img/banner-3.jpg" class="bannerImg3">
+		</div>
+		<div class="text">
+			<h1 class="textTitle">Wij bouwen oplossingen</h1>
+			<p class="textText">Die echt werken...</p>
+			<a class="textButton"></a>
+		</div>
 	</body>
 </html>
