--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 			<img src="./img/banner-3.jpg" class="bannerImg3">
 		</div>
 		<div class="text">
-			<h1 class="textTitle">Wij bouwen oplossingen</h1>
-			<p class="textText">Die echt werken...</p>
-			<a class="textButton"></a>
+			<p class="textP"><span class="textTitle">Wij bouwen oplossingen</span>  <span class="textText">Die echt werken...</span> <a class="textButton"><span class="textButtonText">Meer Weten?</span></a></p>
+		</div>
+		<div>
+			<img src="./img/footer.jpg" class="footerLogo">
 		</div>
 	</body>
 </html>
