--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		</div>
 		<img src="./img/header.jpg" class="headerLogo">
 		<div class="images">
-			<img src="./img/banner-1.jpg" class="bannerImg1">
-			<img src="./img/banner-2.jpg" class="bannerImg2">
-			<img src="./img/banner-3.jpg" class="bannerImg3">
+			<a class="bannerButton1" href="./index.html"><div class="bannerImg1"><div class="bannerText1">Geschiedenis</div></div></a><a class="bannerButton2"><img src="./img/banner-2.jpg" class="bannerImg2"></a><a class="bannerButton3"><img src="./img/banner-3.jpg" class="bannerImg3"></a>
+			<div class="bannerText2">Deals</div>
+			<div class="bannerText3">Diensten</div>
 		</div>
 		<div class="text">
 			<p class="textP"><span class="textTitle">Wij bouwen oplossingen</span>  <span class="textText">Die echt werken...</span> <a class="textButton"><span class="textButtonText">Meer Weten?</span></a></p>
