--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	<body>
 		<div class="header">
 			<img src="./img/logo.jpg" class="logo">
-			<div class="buttons">
-				<a class="button">Home</a>
-				<a class="button">Over Ons </a>
-				<a class="button">Portfolio</a>
-				<a class="button">Nieuws</a>
-				<a class="button">Contact</a>
+			<div class="headerButtons">
+				<a href="./index.html" class="button">Home</a>
+				<a href="./index.html" class="button">Over Ons <img src="./img/angle-down-solid.svg" class="headerButtonImg"></a>
+				<a href="./index.html" class="button">Portfolio</a>
+				<a href="./index.html" class="button">Nieuws</a>
+				<a href="./index.html" class="button">Contact</a>
 			</div>
 		</div>
 		<img src="./img/header.jpg" class="headerLogo">
@@ -23,10 +23,15 @@
 			<a class="bannerButton3" href="./index.html"><div class="bannerImg3"><div class="bannerText3">Diensten</div></div></a>
 		</div>
 		<div class="text">
-			<p class="textP"><span class="textTitle">Wij bouwen oplossingen</span>  <span class="textText">Die echt werken...</span> <a class="textButton"><span class="textButtonText">Meer Weten?</span></a></p>
+			<p class="textP"><span class="textTitle">Wij bouwen oplossingen</span><span class="textText">Die echt werken...</span> <a class="textButton"><span class="textButtonText">Meer Weten?</span></a></p>
 		</div>
-		<div>
+		<div class="footer">
 			<img src="./img/footer.jpg" class="footerLogo">
+			<div class="footerButtons">
+				<a href="./index.html" class="footerButton1"><p class=footerP><span class="footerButtonTitle">Deals</span><br><span class="footerButtonText">Bekijk onze deals</span></p></a>
+				<a href="./index.html" class="footerButton2"><img src="img/toolbox-solid.svg" class="footerImg"><p class=footerP><span class="footerButtonTitle">Diensten</span><br><span class="footerButtonText">Bekijk onze diensten</span></p></a>
+				<a href="./index.html" class="footerButton3"><img src="img/envelope-regular.svg" class="footerImg"><p class=footerP><span class="footerButtonTitle">Contact</span><br><span class="footerButtonText">Stuur een bericht</span></p></a>
+			</div>
 		</div>
 	</body>
 </html>
