--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
 				<a href="./index.html" class="footerButton2"><img src="img/toolbox-solid.svg" class="footerImg"><p class=footerP><span class="footerButtonTitle">Diensten</span><br><span class="footerButtonText">Bekijk onze diensten</span></p></a>
 				<a href="./index.html" class="footerButton3"><img src="img/envelope-regular.svg" class="footerImg"><p class=footerP><span class="footerButtonTitle">Contact</span><br><span class="footerButtonText">Stuur een bericht</span></p></a>
 			</div>
+			<div class="line"></div>
 			<div class="footerText">
-				<div class="box1">
-					<span class="footerTitleText">Over Ons</span>
+				<div class="overOns">
+					<div class="footerTitleOverOns">Over Ons</div>
+					<div class="footerTextText"></div>
 				</div>
-				<div class="box2">
-					<span class="footerTitleText">Contact</span>
+				<div class="contact">
+					<div class="footerTitleContact">Contact</div>
 					<span><img src="img/map-marker-alt-solid.svg" class="footerImg"></span>
 					<span><img src="img/mobile-alt-solid.svg" class="footerImg"></span>
 					<span><img src="img/envelope-regular.svg" class="footerImg"></span>
