--- a/index.html
+++ b/index.html
@@ -36,15 +36,17 @@
 			<div class="footerText">
 				<div class="overOns">
 					<div class="footerTitleOverOns">Over Ons</div>
-					<div class="footerTextText"></div>
+					<div class="footerTextText">
+							Proin vestibulum mi ut dui porta euismod. Maecenas vulputate turpis sed mi ullamcorper suscipit. Suspendisse maximus felis augue, nec tristique nunc fringilla a. Praesent laoreet lorem pretium, ultricies orci eget, consequat arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque vehicula, nibh a hendrerit venenatis, dolor tellus egestas mi, faucibus imperdiet risus purus et ligula. Ut et nisl nec libero imperdiet porttitor sed ac nisl. Aenean molestie nisi arcu, et ultricies dui commodo pretium. Sed quis ligula ac neque pharetra fringilla eu in ipsum. Pellentesque volutpat, eros et volutpat pulvinar, est eros ornare quam, sed lacinia diam diam eget elit. Proin hendrerit quam sit amet mi placerat feugiat. Morbi eleifend, diam vehicula elementum tempus, lacus eros ultrices dolor, in feugiat lorem dui vitae ligula. 
+					</div>
 				</div>
 				<div class="contact">
 					<div class="footerTitleContact">Contact</div>
-					<span><img src="img/map-marker-alt-solid.svg" class="footerImg"></span>
-					<span><img src="img/mobile-alt-solid.svg" class="footerImg"></span>
-					<span><img src="img/envelope-regular.svg" class="footerImg"></span>
+					<span class="item1"><img src="img/map-marker-alt-solid.svg" class="item1Img"><span class="item1Text"></span></span>
+					<span class="item2"><img src="img/mobile-alt-solid.svg" class="item2Img"><span class="item2Text"></span></span>
+					<span class="item3"><img src="img/envelope-regular.svg" class="item3Img"><span class="item3Text"></span></span>
 				</div>
 			</div>
 		</div>
 	</body>
-</html>
+</html
