--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<meta charset="UTF-8">
 	<title></title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<script src="https://kit.fontawesome.com/6c27636829.js" crossorigin="anonymous"></script>
 </head>
 	<body>
 		<div class="header">
 			<img src="./img/logo.jpg" class="logo">
 			<div class="headerButtons">
 				<a href="./index.html" class="button">Home</a>
-				<a href="./index.html" class="button">Over Ons <img src="./img/angle-down-solid.svg" class="headerButtonImg"></a>
+				<a href="./index.html" class="button">Over Ons <i class="fas fa-angle-down"></i></a>
 				<a href="./index.html" class="button">Portfolio</a>
 				<a href="./index.html" class="button">Nieuws</a>
 				<a href="./index.html" class="button">Contact</a>
@@ -28,9 +29,9 @@
 		<div class="footer">
 			<img src="./img/footer.jpg" class="footerLogo">
 			<div class="footerButtons">
-				<a href="./index.html" class="footerButton1"><p class=footerP><span class="footerButtonTitle">Deals</span><br><span class="footerButtonText">Bekijk onze deals</span></p></a>
-				<a href="./index.html" class="footerButton2"><img src="img/toolbox-solid.svg" class="footerImg"><p class=footerP><span class="footerButtonTitle">Diensten</span><br><span class="footerButtonText">Bekijk onze diensten</span></p></a>
-				<a href="./index.html" class="footerButton3"><img src="img/envelope-regular.svg" class="footerImg"><p class=footerP><span class="footerButtonTitle">Contact</span><br><span class="footerButtonText">Stuur een bericht</span></p></a>
+				<a href="./index.html" class="footerButton1"><i class="far fa-handshake fa-3x"></i><p class=footerP><span class="footerButtonTitle">Deals</span><br><span class="footerButtonText">Bekijk onze deals</span></p></a>
+				<a href="./index.html" class="footerButton2"><i class="fas fa-toolbox fa-3x"></i><p class=footerP><span class="footerButtonTitle">Diensten</span><br><span class="footerButtonText">Bekijk onze diensten</span></p></a>
+				<a href="./index.html" class="footerButton3"><i class="far fa-envelope fa-3x"></i><p class=footerP><span class="footerButtonTitle">Contact</span><br><span class="footerButtonText">Stuur een bericht</span></p></a>
 			</div>
 			<div class="line"></div>
 			<div class="footerText">
@@ -42,11 +43,12 @@
 				</div>
 				<div class="contact">
 					<div class="footerTitleContact">Contact</div>
-					<span class="item1"><img src="img/map-marker-alt-solid.svg" class="item1Img"><span class="item1Text"></span></span>
-					<span class="item2"><img src="img/mobile-alt-solid.svg" class="item2Img"><span class="item2Text"></span></span>
-					<span class="item3"><img src="img/envelope-regular.svg" class="item3Img"><span class="item3Text"></span></span>
+					<div class="item1"><img src="img/map-marker-alt-solid.svg" class="item1Img"><span class="item1Text">Romboutslaan 34<br>3312 KP Dordrecht</span></div>
+					<div class="item2"><img src="img/mobile-alt-solid.svg" class="item2Img"><span class="item2Text">078 - 699 9999</span></div>
+					<div class="item3"><img src="img/envelope-regular.svg" class="item3Img"><span class="item3Text">info@davinci-handy.nl</span></div>
 				</div>
-			</div>
+			</div>	
 		</div>
+		<div class="footerFooter"><span class="footerFooterText">© Emile Mol, 2019</span></div>
 	</body>
 </html
