--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 				</div>
 				<div class="contact">
 					<div class="footerTitleContact">Contact</div>
-					<div class="item1"><img src="img/map-marker-alt-solid.svg" class="item1Img"><span class="item1Text">Romboutslaan 34<br>3312 KP Dordrecht</span></div>
-					<div class="item2"><img src="img/mobile-alt-solid.svg" class="item2Img"><span class="item2Text">078 - 699 9999</span></div>
-					<div class="item3"><img src="img/envelope-regular.svg" class="item3Img"><span class="item3Text">info@davinci-handy.nl</span></div>
+					<div class="item1"><i class="fas fa-map-marker-alt fa-2x  item1Img"></i><span class="item1Text">Romboutslaan 34<br>3312 KP Dordrecht</span></div>
+					<div class="item2"><i class="fas fa-mobile-alt fa-2x  item2Img"></i><span class="item2Text">078 - 699 9999</span></div>
+					<div class="item3"><i class="far fa-envelope fa-2x item3Img"></i><span class="item3Text">info@davinci-handy.nl</span></div>
 				</div>
 			</div>	
 		</div>
