--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 			<img src="./img/logo.jpg" class="logo">
 			<div class="headerButtons">
 				<a href="./index.html" class="button">Home</a>
-				<a href="./index.html" class="button">Over Ons <i class="fas fa-angle-down"></i></a>
+				<span class="button dropdownButton">Over Ons <i class="fas fa-angle-down"></i></span>
 				<a href="./index.html" class="button">Portfolio</a>
 				<a href="./index.html" class="button">Nieuws</a>
 				<a href="./index.html" class="button">Contact</a>
+				<ul class="dropdown">
+					<li class="topButton"><a href="./pages/Geschiedenis.html" class="button">Geschiedenis</a></li>
+					<li><a href="./pages/Deals.html" class="button">Deals</a></li>
+					<li><a href="./pages/Diensten.html" class="button">Diensten</a></li>
+				</ul>
 			</div>
 		</div>
 		<img src="./img/header.jpg" class="headerLogo">
