--- a/index.html
+++ b/index.html
@@ -10,40 +10,49 @@
 		<div class="header">
 			<img src="./img/logo.jpg" class="logo">
 			<div class="headerButtons">
-				<a href="./index.html" class="button">Home</a>
-				<span class="button dropdownButton">Over Ons <i class="fas fa-angle-down"></i></span>
-				<a href="./index.html" class="button">Portfolio</a>
-				<a href="./index.html" class="button">Nieuws</a>
-				<a href="./index.html" class="button">Contact</a>
+				<a href="./index.html" class="button">HOME</a>
+				<span class="button dropdownButton">OVER ONS <i class="fas fa-angle-down"></i></span>
+				<a href="./index.html" class="button">PORTFOLIO</a>
+				<a href="./index.html" class="button">NIEUWS</a>
+				<a href="./index.html" class="button">CONTACT</a>
 				<ul class="dropdown">
-					<li class="topButton"><a href="./pages/Geschiedenis.html" class="button">Geschiedenis</a></li>
-					<li><a href="./pages/Deals.html" class="button">Deals</a></li>
-					<li><a href="./pages/Diensten.html" class="button">Diensten</a></li>
+					<li><a href="./index.html" class="buttonDropdown1">Geschiedenis</a></li>
+					<li><a href="./index.html" class="buttonDropdown2">Deals</a></li>
+					<li><a href="./pages/diensten.html" class="buttonDropdown3">Diensten</a></li>
 				</ul>
 			</div>
 		</div>
 		<img src="./img/header.jpg" class="headerLogo">
 		<div class="images">
-			<a class="bannerButton1" href="./index.html"><div class="bannerImg1"><div class="bannerText1">Geschiedenis</div></div></a>
-			<a class="bannerButton2" href="./index.html"><div class="bannerImg2"><div class="bannerText2">Deals</div></div></a>
-			<a class="bannerButton3" href="./index.html"><div class="bannerImg3"><div class="bannerText3">Diensten</div></div></a>
+			<a class="bannerButton1" href="./index.html"><div class="bannerImg1"><div class="bannerText1">GESCHIEDENIS</div></div></a>
+			<a class="bannerButton2" href="./index.html"><div class="bannerImg2"><div class="bannerText2">DEALS</div></div></a>
+			<a class="bannerButton3" href="./pages/diensten.html"><div class="bannerImg3"><div class="bannerText3">DIENSTEN</div></div></a>
 		</div>
 		<div class="text">
-			<p class="textP"><span class="textTitle">Wij bouwen oplossingen</span><span class="textText">Die echt werken...</span> <a class="textButton"><span class="textButtonText">Meer Weten?</span></a></p>
+			<p class="textP"><span class="textTitle">Wij bouwen oplossingen</span><span class="textText">Die echt werken...</span> <a class="textButton"><span class="textButtonText">MEER WETEN?</span></a></p>
 		</div>
 		<div class="footer">
 			<img src="./img/footer.jpg" class="footerLogo">
 			<div class="footerButtons">
-				<a href="./index.html" class="footerButton1"><i class="far fa-handshake fa-3x"></i><p class=footerP><span class="footerButtonTitle">Deals</span><br><span class="footerButtonText">Bekijk onze deals</span></p></a>
-				<a href="./index.html" class="footerButton2"><i class="fas fa-toolbox fa-3x"></i><p class=footerP><span class="footerButtonTitle">Diensten</span><br><span class="footerButtonText">Bekijk onze diensten</span></p></a>
-				<a href="./index.html" class="footerButton3"><i class="far fa-envelope fa-3x"></i><p class=footerP><span class="footerButtonTitle">Contact</span><br><span class="footerButtonText">Stuur een bericht</span></p></a>
+				<a href="./index.html" class="footerButton1"><i class="far fa-handshake fa-3x"></i><p class=footerP><span class="footerButtonTitle">DEALS</span><br><span class="footerButtonText">BEKIJK ONZE DEALS</span></p></a>
+				<a href="./pages/diensten.html" class="footerButton2"><i class="fas fa-toolbox fa-3x"></i><p class=footerP><span class="footerButtonTitle">DIENSTEN</span><br><span class="footerButtonText">BEKIJK ONZE DIENSTEN</span></p></a>
+				<a href="./index.html" class="footerButton3"><i class="far fa-envelope fa-3x"></i><p class=footerP><span class="footerButtonTitle">CONTACT</span><br><span class="footerButtonText">STUUR EEN BERICHT</span></p></a>
 			</div>
 			<div class="line"></div>
 			<div class="footerText">
 				<div class="overOns">
 					<div class="footerTitleOverOns">Over Ons</div>
 					<div class="footerTextText">
-							Proin vestibulum mi ut dui porta euismod. Maecenas vulputate turpis sed mi ullamcorper suscipit. Suspendisse maximus felis augue, nec tristique nunc fringilla a. Praesent laoreet lorem pretium, ultricies orci eget, consequat arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque vehicula, nibh a hendrerit venenatis, dolor tellus egestas mi, faucibus imperdiet risus purus et ligula. Ut et nisl nec libero imperdiet porttitor sed ac nisl. Aenean molestie nisi arcu, et ultricies dui commodo pretium. Sed quis ligula ac neque pharetra fringilla eu in ipsum. Pellentesque volutpat, eros et volutpat pulvinar, est eros ornare quam, sed lacinia diam diam eget elit. Proin hendrerit quam sit amet mi placerat feugiat. Morbi eleifend, diam vehicula elementum tempus, lacus eros ultrices dolor, in feugiat lorem dui vitae ligula. 
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo laboriosam 
+						odit, delectus error quas earum, sint ratione cumque perspiciatis cum volupta
+						tum at minus. Deleniti quasi suscipit neque quas consequatur sed. Ex impedit 
+						error iure sint architecto accusamus vel delectus quidem reprehenderit soluta 
+						quos possimus sed quod, nam, sit ratione excepturi! Consectetur, illum! Lorem 
+						ipsum dolor sit amet, consectetur adipisicing elit. Explicabo laboriosam 
+						odit, delectus error quas earum, sint ratione cumque perspiciatis cum volupta
+						tum at minus. Deleniti quasi suscipit neque quas consequatur sed. Ex impedit 
+						error iure sint architecto accusamus vel delectus quidem reprehenderit soluta 
+						quos possimus sed quod, nam, sit ratione excepturi! Consectetur, illum!
 					</div>
 				</div>
 				<div class="contact">
