--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 			<img src="./img/logo.jpg" class="logo">
 			<div class="headerButtons">
 				<a href="./index.html" class="button">HOME</a>
-				<span class="button dropdownButton">OVER ONS <i class="fas fa-angle-down"></i></span>
+				<span class="button dropdownButton">OVER ONS <i class="fas fa-angle-down"></i>
+					<span class="dropdown">
+							<a href="./index.html" class="buttonDropdown1">Geschiedenis</a>
+							<a href="./index.html" class="buttonDropdown2">Deals</a>
+							<a href="./pages/diensten.html" class="buttonDropdown3">Diensten</a>
+					</span>
+				</span>
 				<a href="./index.html" class="button">PORTFOLIO</a>
 				<a href="./index.html" class="button">NIEUWS</a>
 				<a href="./index.html" class="button">CONTACT</a>
-				<ul class="dropdown">
-					<li><a href="./index.html" class="buttonDropdown1">Geschiedenis</a></li>
-					<li><a href="./index.html" class="buttonDropdown2">Deals</a></li>
-					<li><a href="./pages/diensten.html" class="buttonDropdown3">Diensten</a></li>
-				</ul>
 			</div>
 		</div>
 		<img src="./img/header.jpg" class="headerLogo">
