--- a/pages/diensten.html
+++ b/pages/diensten.html
@@ -11,15 +11,16 @@
 			<img src="../img/logo.jpg" class="logo">
 			<div class="headerButtons">
 				<a href="../index.html" class="button">HOME</a>
-				<span class="button dropdownButton">OVER ONS <i class="fas fa-angle-down"></i></span>
+				<span class="button dropdownButton">OVER ONS <i class="fas fa-angle-down"></i>
+					<span class="dropdown">
+						<a href="./index.html" class="buttonDropdown1">Geschiedenis</a>
+						<a href="./index.html" class="buttonDropdown2">Deals</a>
+						<a href="./pages/diensten.html" class="buttonDropdown3">Diensten</a>
+					</span>
+				</span>
 				<a href="../index.html" class="button">PORTFOLIO</a>
 				<a href="../index.html" class="button">NIEUWS</a>
 				<a href="../index.html" class="button">CONTACT</a>
-				<ul class="dropdown">
-					<li><a href="../index.html" class="buttonDropdown1">Geschiedenis</a></li>
-					<li><a href="../index.html" class="buttonDropdown2">Deals</a></li>
-					<li><a href="../pages/diensten.html" class="buttonDropdown3">Diensten</a></li>
-				</ul>
 			</div>
 		</div>
         <img src="../img/header.jpg" class="headerLogo">
@@ -27,7 +28,8 @@
             <span class="breadcrumb">Home > Diensten</span>
             <p class="dienstenTitle">Diensten</p>
             <p class="dienstenText">
-                DaVinci Handy heeft een grote historie en in de loop van de tijd zijn dan ook vele <span class="hoverable">nieuwbouw</span><span class="tooltip1">Een nieuwbouw project zijn woningen die korter dan een jaar geleden gebouwd of nu nog in aanbouw zijn</span> projecten opgeleverd. Je kunt dan 
+				DaVinci Handy heeft een grote historie en in de loop van de tijd zijn dan ook vele 
+				<span class="hoverable1">nieuwbouw<span class="tooltip1">Een nieuwbouw project zijn woningen die korter dan een jaar geleden gebouwd of nu nog in aanbouw zijn</span></span> projecten opgeleverd. Je kunt dan 
                 denken aan een vrijstaande woning, twee onder een kap woningen of zelfs een huizenblok. Wij gaan graag samen met jou op 
                 zoek naar je meest ideale woning, perfect passend binnen je budget in combinatie met de beste bouw kwaliteit en het juiste 
                 advies van A tot Z. Loop je dus met een idee rond om zelf te gaan bouwen? Kom dan naar DaVinci Handy en maak kennis met 
@@ -37,7 +39,8 @@
                 Een aanbouw of opbouw plaatsen behoort bij DaVinci Handy tot de vaste werkzaamheden. Zoveel klanten hebben wij al mogen 
                 voorzien van een efficiente uitbreiding van hun woning. Door onze grote ervaring, eigen vakmensen en degelijke partners 
                 kunnen wij elke opdracht perfect realiseren. Vanaf het allereerste moment denken wij graag met je mee en voorzien wij je van 
-                het meest betrouwbare <span class="hoverable">advies</span><span class="tooltip2">Neem met ons contact op om van ons advies gebruik te kunnen maken</span>. Altijd rekening houdend met de technische haalbaarheid, het budget en <span class="hoverable">regelgeving</span><span class="tooltip3">Regelgeving kan per gemeente verschillen. Wij nemen dit voor onze rekening</span> omtrent het 
+				het meest betrouwbare <span class="hoverable2">advies<span class="tooltip2">Neem met ons contact op om van ons advies gebruik te kunnen maken</span></span>. 
+				Altijd rekening houdend met de technische haalbaarheid, het budget en <span class="hoverable3">regelgeving<span class="tooltip3">Regelgeving kan per gemeente verschillen. Wij nemen dit voor onze rekening</span></span> omtrent het 
                 bouwen in de wijk en/of gemeente.
             </p>
         </div>
