--- a/pages/diensten.html
+++ b/pages/diensten.html
@@ -13,9 +13,9 @@
 				<a href="../index.html" class="button">HOME</a>
 				<span class="button dropdownButton">OVER ONS <i class="fas fa-angle-down"></i>
 					<span class="dropdown">
-						<a href="./index.html" class="buttonDropdown1">Geschiedenis</a>
-						<a href="./index.html" class="buttonDropdown2">Deals</a>
-						<a href="./pages/diensten.html" class="buttonDropdown3">Diensten</a>
+						<a href="../index.html" class="buttonDropdown1">Geschiedenis</a>
+						<a href="../index.html" class="buttonDropdown2">Deals</a>
+						<a href="./diensten.html" class="buttonDropdown3">Diensten</a>
 					</span>
 				</span>
 				<a href="../index.html" class="button">PORTFOLIO</a>
